# bucketgen

./: .gitignore  LICENSE  README.md  demonstration.ipynb  pyproject.toml
bucketgen/: __init__.py  generator.py  loader.py
tests/: test_generator.py  test_loader.py
